scss/_navbar.scss
//
// Mixins
// --------------------------------------------------

@mixin navbar-base($bg-color, $hove-clolr) {
  @media (max-width: $grid-float-breakpoint) {
    background-color: $bg-color;
  }
  .nav {
    a:hover,
    .active a {
      border-bottom-color: $bg-color;

      @media (max-width: $grid-float-breakpoint) {
        background-color: $hove-clolr;
      }
    }
  }
  .navbar-brand {
    background-color: $bg-color;
  }
}

@mixin vertical-align ($height, $parent-height: $navbar-height) {
  padding-top: ($parent-height - $height) * .5 + .5 !important;
  padding-bottom: ($parent-height - $height) * .5 - .5 !important;
  font-size: $height;
  line-height: $height;
}

//
// Navbar common
// --------------------------------------------------

$navbar-background-color: #fff !default;
$hover-dark-gray: #413c38 !default;

.navbar {
  background-color: $navbar-background-color;
  border-bottom: 1px solid $table-border-color;

  .navbar-brand {
    padding: 16px 26px 10px 29px;
    margin-right: 14px;
    background-color: $brand-customer;

    &:before {
      display: block;
      width: 59px;
      height: 20px;
      content: "";
      background-image: url("../images/logo_gengo.svg");
      background-repeat: no-repeat;
      background-size: 59px 20px;
    }
  }
  .navbar-toggle .icon-bar {
    background-color: #fff;
  }
  .btn {
    padding: 4.5px $padding-base-horizontal;
    margin: 9px 0;
    font-size: 13px;
  }
  p,
  p > a {
    color: $gengo-gray-light;
  }
}

.navbar-collapse .navbar-nav {
  // Uncollapse the nav
  @media (min-width: $grid-float-breakpoint) {
    > li {
      > a {
        padding: 13px 0 10px;
        padding-bottom: $navbar-padding-vertical - $navbar-btn-border-bottom;
        margin: 0 17px;
        color: $text-color;
        border-bottom: solid $navbar-btn-border-bottom $navbar-background-color;
        transition: border-bottom-color .3s ease;
      }
      &.active a,
      a:hover {
        background-color: $navbar-background-color;
        border-bottom-color: $brand-customer;
      }
    }
  }
}

//
// Customer
// --------------------------------------------------

.customer .navbar {
  @include navbar-base($brand-customer, #199b71);
}

.translator .navbar .navbar-brand,
.developer .navbar .navbar-brand,
.admin .navbar .navbar-brand {
  padding-right: 30px;
  padding-left: 30px;
}

//
// Translator
// --------------------------------------------------

.translator .navbar {
  @include navbar-base($brand-translator, #89c1b7);

  .navbar-brand {
    @include vertical-align(26px);

    &:before {
      width: 26px;
      height: 26px;
      background-image: url("../images/logo_translator.svg");
      background-size: 26px 26px;
    }
  }
}

//
// Developer
// --------------------------------------------------

.developer .navbar {
  @include navbar-base($brand-developer, #d25440);

  .navbar-brand {
    @include vertical-align(26px);

    &:before {
      width: 26px;
      height: 26px;
      background-image: url("../images/logo_developer.svg");
      background-size: 26px 26px;
    }
  }
}

//
// Admin
// --------------------------------------------------

.admin .navbar {
  @include navbar-base($brand-admin, $hover-dark-gray);

  .navbar-brand {
    @include vertical-align(27px);

    &:before {
      width: 27px;
      height: 27px;
      background-image: url("../images/logo_admin.svg");
      background-size: 27px 27px;
    }
  }
}

//
// Workbench
// --------------------------------------------------

$workbench-text-color: #a6a4a1 !default;
$workbench-border-color: #716d69 !default;
$workbench-icon-color: #837f7c !default;
$workbench-icon-active-color: #fff !default;

.workbench .navbar {
  font-size: 13px;
  color: $workbench-text-color;
  background-color: $brand-workbench;
  border-bottom-color: $brand-workbench;

  .container-fluid {
    padding-left: 0;
  }

  .border-left {
    border-left: 1px solid $workbench-border-color;
  }
  .nav {
    padding: 0 23px;

    .navbar-text {
      padding: 0 $padding-base-horizontal;
    }
    .navbar-brand {
      padding-right: 30px;
      padding-left: 28px;
      background-color: $brand-workbench;

      &:hover {
        background-color: $hover-dark-gray;
      }
    }
    a,
    a:hover,
    .active a {
      border-bottom: 0;
    }
    a {
      padding: 14px 8px 13px;
      margin: 0;
      color: $workbench-text-color;
      background-color: $brand-workbench;
    }
    > li > a:hover,
    .open > a:hover {
      background-color: $hover-dark-gray;

      &.disabled {
        cursor: default;
        background-color: transparent;
      }
    }
    .btn {
      font-size: 13px;
    }
    li > {
      [class^="icon-"],
      [class*=" icon-"] {
        color: #837f7c;

        &:hover,
        &.selected {
          color: $workbench-icon-active-color;
          &.disabled {
            color: #837f7c;
          }
        }
      }
      .icon-vertical,
      .icon-horizontal,
      .icon-expand {
        @include vertical-align(12px);
      }
      .icon-funnel {
        @include vertical-align(14px);
      }
      .icon-info,
      .icon-validation {
        @include vertical-align(16px);
      }
      .icon-memory {
        // this is special case to center the icon
        padding-top: 10.5px !important;
        padding-bottom: 15.5px !important;
        font-size: 22px;
        line-height: 22px;
      }
    }
  }
  .navbar-header .nav {
    padding: 0;
  }
  .navbar-right {
    margin-right: 0;
    padding: 0;

    .btn,
    .navbar-text {
      margin-right: 0;
      margin-bottom: 0;
      margin-left: 0;
    }
    .navbar-text {
      margin-right: $padding-base-horizontal;
    }
  }
  .dropdown-menu {
    @include border-top-radius(1px);
    @include border-bottom-radius(2px);
    min-width: 190px;
    padding: 5px 0;
    margin-top: 0;
    background-color: $brand-workbench;
    border: 1px solid #433f3b;
    box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .2);

    &:before,
    &:after {
      border-color: transparent;
    }
    .divider {
      background-color: #635e5a;
    }
    > li > a {
      position: relative;
      padding: 0 17px;
      line-height: 36px;
      color: #fff;

      &:hover {
        padding-bottom: 0;
        background-color: #322e2a;
        border-radius: 0;
      }
      .text {
        margin-right: 40px;
        text-align: right;
      }
      .count {
        position: absolute;
        right: 24px;
      }
      > i {
        margin-right: $padding-base-horizontal;
        font-size: 12px;
        line-height: inherit;
      }
    }
    .section-text {
      padding: 0 24px;
      font-size: 10px;
      line-height: 21px;
      color: $workbench-text-color;
    }
  }
}

// Navbar form
//
.navbar-form {
  @include navbar-vertical-align($input-height-small);
}

